[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Prefab/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Utility/MainScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/Utility/Pause.gd" type="Script" id=3]

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HUD" parent="HUD" instance=ExtResource( 1 )]

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="Menu"]
layer = 100

[node name="Pause" type="Control" parent="Menu/CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Menu/CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CanvasLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -58.0
margin_right = 41.5
margin_bottom = 58.0

[node name="resume" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Resume"

[node name="options" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Options"

[node name="save" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Save"

[node name="load" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Load"

[node name="returnToMainMenu" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 92.0
text = "Main Menu"

[node name="quit" type="Button" parent="Menu/CanvasLayer/Pause/VBoxContainer"]
margin_top = 96.0
margin_right = 83.0
margin_bottom = 116.0
text = "Quit"

[node name="Label" type="Label" parent="Menu/CanvasLayer/Pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 14.0
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -11.0
margin_right = 29.0
margin_bottom = 11.0

[node name="Button" type="Button" parent="Menu/VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Level 1"

[node name="Main2D" type="Node2D" parent="."]

[node name="GrappleCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MechHoverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MechHoverCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="startHoverCooldown" from="." to="MechHoverCooldownTimer" method="start"]
[connection signal="startHoverTimer" from="." to="MechHoverTimer" method="start"]
[connection signal="pressed" from="Menu/CanvasLayer/Pause/VBoxContainer/resume" to="Menu/CanvasLayer/Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/CanvasLayer/Pause/VBoxContainer/quit" to="Menu/CanvasLayer/Pause" method="_on_quit_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="GrappleCooldownTimer" to="." method="_on_GrappleCooldownTimer_timeout"]
[connection signal="timeout" from="MechHoverTimer" to="." method="_on_MechHoverTimer_timeout"]
[connection signal="timeout" from="MechHoverCooldownTimer" to="." method="_on_MechHoverCooldownTimer_timeout"]
